// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioQuestion /> should render with default value 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.15rem;
}

.c1 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
}

.c0 {
  margin-left: 0;
  padding-left: 0;
  border: none;
}

.c2 {
  margin-bottom: 0.625rem;
}

<div>
  <fieldset
    class="c0"
  >
    <legend
      class="c1"
    >
      Une question ?
    </legend>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="foo"
          type="radio"
          value="foo"
        />
        <span>
          label foo
        </span>
      </label>
    </div>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="foo"
          type="radio"
          value="baz"
        />
        <span>
          label baz
        </span>
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<RadioQuestion /> should render with selectedValue value 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.15rem;
}

.c1 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
}

.c0 {
  margin-left: 0;
  padding-left: 0;
  border: none;
}

.c2 {
  margin-bottom: 0.625rem;
}

<div>
  <fieldset
    class="c0"
  >
    <legend
      class="c1"
    >
      Une question ?
    </legend>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          checked=""
          name="foo"
          type="radio"
          value="foo"
        />
        <span>
          label foo
        </span>
      </label>
    </div>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="foo"
          type="radio"
          value="baz"
        />
        <span>
          label baz
        </span>
      </label>
    </div>
  </fieldset>
</div>
`;
